# vittlify-cli

./: .travis.yml  Dockerfile  LICENSE  Makefile  README.md  TODO  dev_requirements.txt  pyproject.toml  requirements.txt  setup.py  tox.ini
vt/: help.py  utils.py  vittlify_request.py  vt.py
vt/tests/: test_utils.py  test_vittlify_request.py  test_vt.py
