[tool.poetry]
name = "vittlify-cli"
version = "0.1.0"
description = ""
authors = ["Kevin Yokley <kyokley2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
pysocks = "^1.7.1"
cryptography = "^3.2.1"
colorclass = "^2.2.0"

[tool.poetry.dev-dependencies]
pytest-mock = "^3.3.1"
pytest = "^6.1.2"
bpython = "^0.20"
pdbpp = "^0.10.2"
mock = "^4.0.2"

[tool.poetry.scripts]
vt = 'vt.vt:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
